--- a/styles.css
+++ b/styles.css
@@ -125,7 +125,7 @@ nav a:hover {
 .chat-button {
     position: fixed;
     bottom: 20px;
-    right: 20px;
+    left: 20px;
     padding: 10px 20px;
     background-color: #007bff;
     color: white;
@@ -145,7 +145,7 @@ nav a:hover {
 .chatbot {
     position: fixed;
     bottom: 20px;
-    right: 20px;
+    left: 20px;
     width: 350px;
     background: #fff;
     border: 1px solid #ddd;
@@ -155,6 +155,10 @@ nav a:hover {
     max-height: 450px;
     overflow: hidden;
     box-sizing: border-box;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
 }
 
 /* Estilo para la ventana del chat */
@@ -339,4 +343,98 @@ footer {
     }
 }
 
+.contact-form {
+    background-color: white;
+    padding: 30px;
+    border-radius: 8px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    width: 100%;
+    max-width: 500px;
+    margin: 40px auto;
+}
 
+.contact-form h2 {
+    text-align: center;
+    color: #007bff;
+    font-size: 24px;
+    margin-bottom: 20px;
+}
+
+.contact-form input, .contact-form textarea {
+    width: 100%;
+    padding: 12px;
+    margin: 10px 0;
+    border-radius: 4px;
+    border: 1px solid #ddd;
+    font-size: 16px;
+}
+
+.contact-form textarea {
+    resize: vertical;
+}
+
+.contact-form button {
+    width: 100%;
+    padding: 12px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.contact-form button:hover {
+    background-color: #0056b3;
+}
+
+ /* Estilo del botón flotante de WhatsApp */
+ .whatsapp-button {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: #25D366;
+    color: white;
+    border: none;
+    border-radius: 50%;
+    padding-top: 20px; 
+    padding-left: 20px;
+    padding-right: 20px;
+    font-size: 32px; 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+    z-index: 1000;
+    transition: background-color 0.3s ease;
+}
+
+.whatsapp-button:hover {
+    background-color: #128C7E;
+}
+
+.whatsapp-button svg {
+    width: 32px; /* Aumento el tamaño del SVG */
+    height: 32px; /* Aumento el tamaño del SVG */
+}
+
+/* Estilos para el Modal */
+.modal {
+    display: none; /* El modal está oculto por defecto */
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+}
+
+.modal-content {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    text-align: center;
+    max-width: 400px;
+    margin: auto;
+}
