--- a/styles.css
+++ b/styles.css
@@ -416,3 +416,22 @@ footer {
     height: 32px; /* Aumento el tamaño del SVG */
 }
 
+/* Estilo básico para el modal */
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: none; /* Oculto por defecto */
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-content {
+    background-color: white;
+    padding: 20px;
+    border-radius: 5px;
+    text-align: center;
+}
